config/participants/carrotmm/ingress.yaml

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-carrotmm
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: default-rewrite
spec:
  rules:
    - host: carrotmm-backend.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: carrotmm-sim-carrotmm-backend
              servicePort: 3003
    - host: carrotmm-sdk-scheme-adapter-inbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: carrotmm-sim-carrotmm-scheme-adapter
              servicePort: 4000
    - host: carrotmm-sdk-scheme-adapter-outbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: carrotmm-sim-carrotmm-scheme-adapter
              servicePort: 4001
